# ml-rs-project

./: README.md  pyproject.toml
mlruns/0/: meta.yaml
mlruns/0/6b20b3695d784607af0217fc82876fa5/: meta.yaml
mlruns/0/6b20b3695d784607af0217fc82876fa5/metrics/: accuracy  f1_score
src/forestml/: data.py  pipeline.py  train.py
tests/: test_ml_rs_project.py
