[tool.poetry]
name = "ml-rs-project"
version = "0.1.0"
description = ""
authors = ["Ilya Kozak <kozak@tut.by>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pandas = "1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
